/*
 *  Copyright Contributors to the GPX Animator project.
 *
 *  Licensed under the Apache License, Version 2.0 (the "License");
 *  you may not use this file except in compliance with the License.
 *  You may obtain a copy of the License at
 *
 *      https://www.apache.org/licenses/LICENSE-2.0
 *
 *  Unless required by applicable law or agreed to in writing, software
 *  distributed under the License is distributed on an "AS IS" BASIS,
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *  See the License for the specific language governing permissions and
 *  limitations under the License.
 */

plugins {
    id 'application'
    id 'com.gradleup.shadow' version '9.2.2'
    id 'com.github.spotbugs' version '6.4.6'
    id 'pmd'
    id 'checkstyle'
    id 'java-library'
    id 'org.bytedeco.gradle-javacpp-platform' version '1.5.10'
    id 'io.freefair.lombok' version '9.1.0'
    id 'maven-publish'
}

version = '1.9.0-SNAPSHOT'
group = 'app.gpx-animator'

application {
    mainClass.set('app.gpx_animator.Main')
}

java {
// Before updating Java, check Lombok Gradle Plugin compatibility:
// https://github.com/freefair/gradle-plugins#compatibility-matrix
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

repositories {
    mavenCentral()
}

configurations {
    developmentOnly
}

// We can set this on the command line, too: -PjavacppPlatform="linux-x86,linux-x86_64,macosx-x86_64,macosx-arm64,windows-x86,windows-x86_64"
ext {
    javacppPlatform = 'linux-x86,linux-x86_64,macosx-x86_64,macosx-arm64,windows-x86,windows-x86_64'
}

dependencies {
    compileOnly 'com.github.spotbugs:spotbugs-annotations:4.9.8'
    implementation 'org.jetbrains:annotations:26.0.2-1'
    implementation 'org.bytedeco:javacv:1.5.12'
    implementation 'org.bytedeco:ffmpeg-platform-gpl:7.1-1.5.11'
    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.4'
    implementation 'org.glassfish.jaxb:jaxb-runtime:4.0.6'
    implementation 'javax.activation:activation:1.1.1'
    implementation 'org.slf4j:slf4j-api:2.0.17'
    implementation 'ch.qos.logback:logback-classic:1.5.21'
    implementation 'com.drewnoakes:metadata-extractor:2.19.0'
    implementation 'org.imgscalr:imgscalr-lib:4.2'
    implementation 'commons-io:commons-io:20030203.000550'
    implementation 'com.jgoodies:jgoodies-forms:1.9.0'
    implementation 'com.vladsch.flexmark:flexmark-all:0.64.8'
    implementation 'org.reflections:reflections:0.10.2'
    implementation 'org.apache.maven:maven-artifact:3.9.11'
    implementation 'org.apache.commons:commons-lang3:3.20.0'
    testCompileOnly 'com.github.spotbugs:spotbugs-annotations:4.9.8'
    testImplementation 'com.github.romankh3:image-comparison:4.4.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:6.0.1'
    testRuntimeOnly    'org.junit.jupiter:junit-jupiter-engine:6.0.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:6.0.1'
    testImplementation 'org.junit.platform:junit-platform-launcher:6.0.1'
    testRuntimeOnly    'org.junit.platform:junit-platform-engine:6.0.1'
}

test.classpath += configurations.developmentOnly
run.classpath += configurations.developmentOnly

test {
    useJUnitPlatform { }
    maxParallelForks = 4
    minHeapSize = "1G"
    maxHeapSize = "2G"
}

shadowJar {
    mergeServiceFiles()
}

spotbugs {
    excludeFilter = file("${projectDir}/config/spotbugs/exclude.xml")
}

tasks.spotbugsMain {
    reports.create("html") {
        required = true
    }
    reports.create("xml") {
        required = true
    }
}

tasks.spotbugsTest {
    reports.create("html") {
        required = true
    }
    reports.create("xml") {
        required = true
    }
}

checkstyle {
    configFile = file("${projectDir}/config/checkstyle/checkstyle.xml")
    toolVersion = "12.1.2"
}

pmd {
    toolVersion = "7.18.0"
    ruleSets = []
    ruleSetFiles = files("${projectDir}/config/pmd/pmd-rules.xml")
}

tasks.named('wrapper') {
    distributionType = Wrapper.DistributionType.ALL
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = "UTF-8"
    options.compilerArgs += ["-Xlint:deprecation", "-Xlint:unchecked"]
}

tasks.register('copyFiles', Copy) {
    from(".")
    include("CHANGELOG.md", "LICENSE.md")
    into("./src/main/resources")
}

tasks.register('deleteFiles', Delete) {
    delete("./src/main/resources/CHANGELOG.md", "./src/main/resources/LICENSE.md")
}

tasks.register('writeBuildInfo', WriteProperties) {
    destinationFile = layout.buildDirectory.file('generated-resources/build-info.properties')
    property('version', project.version.toString())
}
sourceSets.main.resources.srcDir(layout.buildDirectory.dir('generated-resources'))
tasks.processResources { dependsOn 'writeBuildInfo' }
tasks.named('processResources') {
    dependsOn(writeBuildInfo)
}

publishing {
    afterEvaluate {
        components.java.withVariantsFromConfiguration(configurations.shadowRuntimeElements) {
            skip()
        }
    }
    publications {
        release(MavenPublication) {
            from components.java
        }
    }
}

processResources.dependsOn copyFiles
clean.dependsOn deleteFiles
assemble.dependsOn check
